drkns 22.05.2019 19:43:43 +0100 - build 5400

1. Как выяснилось, в XP x64 уже и так всё есть, поэтому отключим врапперы для x64 (пока в CRT не начнут использовать что-то, чего там нет).

2. Пара мелочей.

drkns 21.05.2019 21:42:42 +0100 - build 5399

1. Поддержка x64 в vc_crt_fix.asm. Теперь, наверное, сможем работать и в XP x64.

drkns 15.05.2019 23:45:23 +0200 - build 5398

1. https://docs.microsoft.com/en-us/windows/desktop/shell/launch
   "In general, trying to determine the list of available verbs for a particular file is somewhat complicated.
   In many cases, you can simply set the lpVerb parameter to NULL, which invokes the default command for the file type."

   Сделаем по документации, т.к. "trying to determine" иногда выдаёт дичь.

drkns 11.05.2019 23:42:12 +0100 - build 5397

1. Fix build.

drkns 11.05.2019 22:55:22 +0100 - build 5396

1. Новая версия fmt.

2. Рефакторинг.

drkns 06.05.2019 22:44:11 +0100 - build 5395

1. При обрезании строк в UI вместо "..." используется "…" для экономии места.

2. Мелкие уточнения vcxproj и сборочных скриптов.

drkns 04.05.2019 17:16:12 +0100 - build 5394

1. initguid.cpp больше нет - GUIDы инициализируются напрямую.

2. Костыль для поддержки GCC 7.1.

drkns 03.05.2019 22:15:49 +0100 - build 5393

1. 0003709: Меняются значения относительных дат в фильтре

2. Пара мелочей.

drkns 01.05.2019 23:00:19 +0100 - build 5392

1. Рефакторинг.

2. Больше тестов.

drkns 26.04.2019 23:37:23 +0100 - build 5391

1. Продолжение 5368.

drkns 25.04.2019 23:57:58 +0100 - build 5390

1. Рефакторинг.

2. Больше тестов.

drkns 25.04.2019 22:42:44 +0100 - build 5389

1. 0003706: При нажатии Enter сбрасывается выделение в текущей строке

svs 24.04.2019 16:11:54 +0300 - build 5388

1. SQLite 3.28.0

drkns 18.04.2019 21:59:52 +0100 - build 5387

1. Новая версия fmt.

2. Костыль для поддержки Clang 8.

3. Мелкий рефакторинг.

drkns 17.04.2019 22:23:24 +0100 - build 5386

1. Процесс сборки: