@@ -4896,7 +4896,7 @@ bool FileList::ApplyCommand()
 				break;
 
 			string strConvertedCommand = strCommand;
-			list_names ListNames;
+			delayed_deleter ListNames(false);
 			bool PreserveLFN = false;
 
 			if (SubstFileName(strConvertedCommand, subst_context(i.FileName, i.AlternateFileName()), &ListNames, &PreserveLFN) && !strConvertedCommand.empty())
