@@ -1,3 +1,7 @@
+drkns 25.05.2019 14:14:54 +0100 - build 5401
+
+1. 0003711: Allow multiple file list metasymbols.
+
 drkns 22.05.2019 19:43:43 +0100 - build 5400
 
 1. Как выяснилось, в XP x64 уже и так всё есть, поэтому отключим врапперы для x64 (пока в CRT не начнут использовать что-то, чего там нет).
